testsuite/bsc.typechecker/kind/ClassDefFieldIsNum.bs.bsc-out.expected
checking package dependencies
compiling ClassDefFieldIsNum.bs
Error: "ClassDefFieldIsNum.bs", line 4, column 11: (T0027)
  The numeric type `12' was found where a value type was expected.
