testsuite/bsc.typechecker/kind/ClassDefFieldIsNum.bs
package ClassDefFieldIsNum () where

class Foo a where
    bar :: 12

